--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 	<link href="style.css" rel="stylesheet">
+	<meta name="google-site-verification" content="9GhtOoq7amONd7q-h9DOaZXBg-h4muqW0QMGoWDJn_Q" />
 </head>
 <body>
 
