add description meta

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 	<link href="style.css" rel="stylesheet">
 	<meta name="google-site-verification" content="9GhtOoq7amONd7q-h9DOaZXBg-h4muqW0QMGoWDJn_Q" />
+	<meta name="Description" content="نیک اپزار در زمینه ساخت اپلیکیشن اندرویدی و وب سایت کار می کند.">
 </head>
 <body>
 
